<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.EndGameActivity">

    <Button
        android:id="@+id/activity_end_game_buttonContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onButtonContinueClick"
        android:text="@string/buttonContinueText"
        android:textColor="@color/textColor"
        style="@style/CyzoisEvenings.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_end_game_recyclerViewEndPlayers" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_end_game_recyclerViewEndPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_end_game_textViewName" />

    <TextView
        android:id="@+id/activity_end_game_textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/endGameTextViewName"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toStartOf="@+id/activity_end_game_textViewNbAsked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_end_game_textViewNbAsked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/endGameTextViewNbAskedText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toStartOf="@+id/activity_end_game_textViewNbDone"
        app:layout_constraintStart_toEndOf="@+id/activity_end_game_textViewName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_end_game_textViewNbDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/endGameTextViewNbDoneText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toStartOf="@+id/activity_end_game_textViewPercentage"
        app:layout_constraintStart_toEndOf="@+id/activity_end_game_textViewNbAsked"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_end_game_textViewPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/endGameTextViewPercentageText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toStartOf="@+id/activity_end_game_textViewNbDrunk"
        app:layout_constraintStart_toEndOf="@+id/activity_end_game_textViewNbDone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_end_game_textViewNbDrunk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/endGameTextViewNbDrunkText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_end_game_textViewPercentage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_recyclerViewEndPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>