<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activitys.CreateGameActivity">

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/activity_create_game_seekBarDifficulty"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_create_game_textViewDifficultyVertical"
        app:layout_constraintTop_toTopOf="parent"
        app:mrb_pinColor="@color/primaryColor"
        app:mrb_pinMaxFont="15sp"
        app:mrb_pinMinFont="12sp"
        app:mrb_pinRadius="14dp"
        app:mrb_pinTextColor="@color/primaryTextColor"
        app:mrb_rangeBar="false"
        app:mrb_rangeBarPaddingBottom="20dp"
        app:mrb_rangeBar_rounded="true"
        app:mrb_selectorSize="10dp"
        app:mrb_temporaryPins="true"
        app:mrb_tickEnd="5"
        app:mrb_tickInterval="1"
        app:mrb_tickStart="1" />

    <EditText
        android:id="@+id/activity_create_game_editTextNbTurns"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextNbTurnsHint"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_game_textViewDifficultyVertical"
        app:layout_constraintStart_toEndOf="@+id/activity_create_game_textViewNbTurns"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_create_game_textViewNbTurns"
        style="@style/CyzoisEvenings.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewNbTurnsText"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_game_editTextNbTurns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_create_game_textViewDifficultyVertical"
        style="@style/CyzoisEvenings.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewDifficultyText"
        app:layout_constraintStart_toEndOf="@+id/activity_create_game_editTextNbTurns"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/activity_create_game_buttonStart"
        style="@style/CyzoisEvenings.Button"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="0dp"
        android:onClick="onStartClick"
        android:text="@string/buttonStartText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/activity_create_game_buttonPhoto"
        style="@style/CyzoisEvenings.Button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="onPhotoClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_create_game_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_game_textViewDifficultyVertical">

        <TextView
            android:id="@+id/activity_create_game_textViewMinDrinks"
            style="@style/CyzoisEvenings.TextView.Little"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/textViewMinDrinksText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_create_game_seekBarDrinks"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/activity_create_game_textViewMaxDrinks"
            style="@style/CyzoisEvenings.TextView.Little"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/textViewMaxDrinksText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_create_game_seekBarDrinks" />

        <TextView
            android:id="@+id/activity_create_game_textViewDrinks"
            style="@style/CyzoisEvenings.TextView.Little"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/textViewDrinksText"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/activity_create_game_seekBarDrinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/activity_create_game_seekBarDrinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_create_game_textViewMaxDrinks"
            app:layout_constraintStart_toEndOf="@+id/activity_create_game_textViewMinDrinks"
            app:mrb_connectingLineColor="@color/colorAccent"
            app:mrb_pinColor="@color/primaryColor"
            app:mrb_pinMaxFont="15sp"
            app:mrb_pinMinFont="12sp"
            app:mrb_pinRadius="14dp"
            app:mrb_pinTextColor="@color/primaryTextColor"
            app:mrb_rangeBar="true"
            app:mrb_rangeBarPaddingBottom="20dp"
            app:mrb_rangeBar_rounded="true"
            app:mrb_selectorSize="10dp"
            app:mrb_temporaryPins="true"
            app:mrb_tickEnd="10"
            app:mrb_tickInterval="1"
            app:mrb_tickStart="1" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_create_game_recyclerViewPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_game_buttonAddPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_game_constraintLayout" />

    <Button
        android:id="@+id/activity_create_game_buttonAddPlayer"
        style="@style/CyzoisEvenings.Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="0dp"
        android:minHeight="0dp"
        android:onClick="onAddPlayerClick"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/buttonAddPlayerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_game_buttonStart"
        app:layout_constraintStart_toEndOf="@+id/activity_create_game_buttonPhoto" />
</android.support.constraint.ConstraintLayout>