<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/recycler_item_player_buttonDeletePlayer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:text="@string/buttonDeletePlayerText"
        style="@style/CyzoisEvenings.Button.Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_editTextPlayerName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recycler_item_player_buttonGender"
        style="@style/CyzoisEvenings.Button.NoChange"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:text="@string/buttonGenderFemaleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_editTextPlayerName"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_buttonPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/recycler_item_player_editTextPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTextPlayerNameHint"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_buttonDeletePlayer"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_buttonGender"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recycler_item_player_buttonPhoto"
        style="@style/CyzoisEvenings.Button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/CyzoisEvenings.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_buttonGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>