<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/recycler_item_player_end_textViewNbAsked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endGameTextViewNbAskedText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbDone"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewPlayerName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_item_player_end_textViewNbDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endGameTextViewNbDoneText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewPercentage"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewNbAsked"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_item_player_end_textViewPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endGameTextViewPercentageText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbDrunk"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewNbDone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_item_player_end_textViewNbDrunk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endGameTextViewNbDrunkText"
        android:textAlignment="center"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewPercentage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_item_player_end_textViewPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endGameTextViewName"
        style="@style/CyzoisEvenings.TextView.Little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbAsked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbAsked"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewPlayerName"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbDone"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewNbAsked"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewPercentage"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewNbDone"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_player_end_textViewNbDrunk"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_player_end_textViewPercentage"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>