<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.QuestionActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_group_question_cardViewPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_group_question_imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imageViewPhotoContentDescription"
            tools:srcCompat="@tools:sample/avatars[3]" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/fragment_group_question_textViewDrinks"
        style="@style/CyzoisEvenings.TextView.Big"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/fragment_group_question_buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_group_question_textViewGroup"
        style="@style/CyzoisEvenings.TextView.Big"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewGroupText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_group_question_cardViewPhoto" />

    <TextView
        android:id="@+id/fragment_group_question_textViewQuestion"
        style="@style/CyzoisEvenings.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:maxLines="6"
        android:minLines="4"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/fragment_group_question_textViewDrinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_group_question_textViewDifficulty"
        style="@style/CyzoisEvenings.TextView.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/fragment_group_question_textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_group_question_buttonContinue"
        style="@style/CyzoisEvenings.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonContinueText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>